# llm_course

./: .gitignore  block_softmax.py  position_encode.ipynb  pyproject.toml  quantization.py  self_attention.ipynb  self_attention.py  self_attention_torch.py  train.py
